# FastBNNs

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: cnn.py  mlp.py  mlp_lightning.py  mlp_uncertainty_demo.py
paper/: paper.bib  paper.md
src/: activations.py
src/analysis/: statistics.py
src/bnn/: base.py  converters.py  inference.py  layers.py  losses.py  modules.py  nn_to_bnn.py  priors.py  types.py  utils.py  wrappers.py
src/datasets/: generic.py  polynomial.py
src/fastbnns/bnn/: base.py  inference.py  losses.py  types.py  wrappers.py
src/fastbnns/datasets/: generic.py
src/fastbnns/models/: activations.py  cnn.py  lightning_wrappers.py  mlp.py  polynomial.py
src/fastbnns/simulation/: generators.py  observation.py
src/models/: cnn.py  mlp.py
src/simulation/: images.py  observation.py  polynomials.py
src/utils/: misc.py  torch_utils.py
tests/: test_activations.py
tests/bnn/: test_base.py  test_inference.py  test_losses.py  test_priors.py  test_types.py  test_wrappers.py
tests/utils/: test_torch_utils.py
