[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fastbnns"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
description = "Fast training and inference for Bayesian neural networks."
readme = "README.md"
version = "0.0.0"

requires-python = ">=3.10,<3.13"

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.1",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.19.1",
    "fonttools==4.60.1",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "idna==3.11",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "lightning==2.5.5",
    "lightning-utilities==0.15.2",
    "MarkupSafe==2.1.5",
    "matplotlib==3.10.7",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "packaging==25.0",
    "pillow==11.3.0",
    "propcache==0.4.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.5.5",
    "PyYAML==6.0.3",
    "scipy==1.16.3",
    "setuptools==70.2.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchmetrics==1.8.2",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "typing_extensions==4.15.0",
    "yarl==1.22.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]